--- a/index.html
+++ b/index.html
@@ -15,3 +15,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+/*sa moara camiluta mea ca nu mai pot vereeeeeeeeeeeeeeeeeeee
+barcelona
+alea
+alea*/
